[gd_scene load_steps=7 format=3 uid="uid://37racrrwxuti"]

[ext_resource type="Texture2D" uid="uid://cmarw2nkl1xdq" path="res://assets/Prinbles_Asset_Robin (v 1.1) (9_5_2023)/png/Background/Vector/Default.png" id="1_uxef0"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="4_3cfgc"]
[ext_resource type="Script" path="res://scripts/special_grid.gd" id="5_s8l0m"]
[ext_resource type="Script" path="res://scripts/holder_lock.gd" id="6_20di2"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="6_owwt3"]
[ext_resource type="Script" path="res://scripts/holder_stone.gd" id="7_tryyb"]

[node name="game_window" type="Node2D"]

[node name="bg" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_uxef0")
expand_mode = 1

[node name="grid" type="Node2D" parent="."]
script = ExtResource("4_3cfgc")
width = 10
height = 9
x_start = 168
y_start = 550
x_offset = 96
y_offset = 48
drop_offset = 3
empty_spaces = PackedVector2Array(3, 3)
jelly_spaces = PackedVector2Array(4, 4)
lock_spaces = PackedVector2Array(5, 5)
stone_spaces = PackedVector2Array(6, 6)

[node name="holder_jelly" type="Node2D" parent="."]
script = ExtResource("5_s8l0m")

[node name="holder_lock" type="Node2D" parent="."]
script = ExtResource("6_20di2")

[node name="holder_stone" type="Node2D" parent="."]
script = ExtResource("7_tryyb")

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="hint_timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 11.0
offset_bottom = 91.0
grow_horizontal = 2

[node name="ScoreLabelButton" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Points: 350"

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_owwt3")

[connection signal="damage_jelly" from="grid" to="holder_jelly" method="_on_grid_damage_jelly"]
[connection signal="damage_lock" from="grid" to="holder_lock" method="_on_grid_damage_lock"]
[connection signal="damage_stone" from="grid" to="holder_stone" method="_on_grid_damage_stone"]
[connection signal="make_jelly" from="grid" to="holder_jelly" method="_on_grid_make_jelly"]
[connection signal="make_lock" from="grid" to="holder_lock" method="_on_grid_make_lock"]
[connection signal="make_stone" from="grid" to="holder_stone" method="_on_grid_make_stone"]
[connection signal="remove_lock" from="holder_lock" to="grid" method="_on_holder_lock_remove_lock"]
[connection signal="remove_stone" from="holder_stone" to="grid" method="_on_holder_stone_remove_stone"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
[connection signal="timeout" from="hint_timer" to="grid" method="_on_hint_timer_timeout"]
